<resources>
    <string name="app_name">CalendarMobile</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="numberHolder">#</string>
    <string name="cancel">cancel</string>
    <string name="submit">submit</string>
    <string name="event_title">Event Title</string>
    <string name="Description">Description...</string>
    <string name="thirtyOne">31</string>
    <string name="thirty">30</string>
    <string name="twentyNine">29</string>
    <string name="twentyEight">28</string>
    <string name="twentySeven">27</string>
    <string name="twentySix">26</string>
    <string name="twentyFive">25</string>
    <string name="twentyFour">24</string>
    <string name="twentyThree">23</string>
    <string name="twentyTwo">22</string>
    <string name="twentyOne">21</string>
    <string name="twenty">20</string>
    <string name="nineTeen">19</string>
    <string name="eighteen">18</string>
    <string name="sixteen">16</string>
    <string name="fifteen">15</string>
    <string name="fourteen">14</string>
    <string name="thirteen">13</string>
    <string name="twelve">12</string>
    <string name="eleven">11</string>
    <string name="ten">10</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="seventeen">17</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="march">MAR</string>
    <string name="april">APR</string>
    <string name="may">MAY</string>
    <string name="june">JUN</string>
    <string name="july">JUL</string>
    <string name="august">AUG</string>
    <string name="september">SEP</string>
    <string name="october">OCT</string>
    <string name="november">NOV</string>
    <string name="december">DEC</string>
    <string name="year">YEAR</string>
</resources>
