<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EventFragment">

    <LinearLayout
        android:id="@+id/cancel_submit_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/submit"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/eventViewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/cancel_submit_container">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time"/>
        <EditText
            android:id="@+id/event_view"
            android:hint="@string/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeViewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/eventViewGroup">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clock"/>
        <Button
            android:id="@+id/startTimeButton"
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Start Time"/>


        <Button
            android:id="@+id/endTimeButton"
            android:gravity="bottom"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="End Time"/>


        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

    <EditText
        android:id="@+id/eventDetails"
        android:layout_marginTop="10dp"
        android:hint="@string/Description"
        app:layout_constraintTop_toBottomOf="@id/timeViewGroup"
        android:layout_width="match_parent"
        android:layout_height="200dp" />



</android.support.constraint.ConstraintLayout>